--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
         "laravel-vite-plugin": "^1.0.5",
         "prettier-plugin-blade": "^2.1.19",
         "sass": "1.67",
-        "vite": "^5.4.10",
-        "vite-plugin-static-copy": "^2.0.0"
+        "vite": "^5.4.10"
     },
     "dependencies": {
         "@sweetalert2/theme-dark": "^5.0.18",
